--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <div class="login-container">
@@ -26,63 +27,6 @@
         </form>
     </div>
 
-    <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js";
-        import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-auth.js";
-
-        const firebaseConfig = {
-            apiKey: "AIzaSyC9eufzO00_JtbdVoDrw-bJfF1PY3meYoE",
-            authDomain: "new2025-d2fba.firebaseapp.com",
-            projectId: "new2025-d2fba",
-            storageBucket: "new2025-d2fba.firebasestorage.app",
-            messagingSenderId: "239931222059",
-            appId: "1:239931222059:web:6275e5aa6577fb14f4e26e",
-            measurementId: "G-3F4TJ0K34J"
-        };
-
-        // تهيئة Firebase
-        const app = initializeApp(firebaseConfig);
-        const auth = getAuth(app);
-
-        // الحصول على عناصر النموذج
-        const loginForm = document.getElementById('loginForm');
-        const emailInput = document.getElementById('email');
-        const passwordInput = document.getElementById('password');
-        const errorMessageDiv = document.getElementById('errorMessage');
-
-        // التعامل مع إرسال النموذج
-        loginForm.addEventListener('submit', async (e) => {
-            e.preventDefault(); // منع الإرسال الافتراضي للصفحة
-
-            const email = emailInput.value;
-            const password = passwordInput.value;
-            errorMessageDiv.textContent = ''; // مسح أي رسائل خطأ سابقة
-
-            try {
-                // محاولة تسجيل الدخول باستخدام البريد الإلكتروني وكلمة المرور
-                const userCredential = await signInWithEmailAndPassword(auth, email, password);
-                console.log("تم تسجيل الدخول بنجاح!", userCredential.user);
-                // هنا، بعد تسجيل الدخول بنجاح، يمكنك إعادة توجيه المستخدم لصفحة إدارة المنتجات
-                window.location.href = "dashboard.html"; // افترض أن لديك ملف dashboard.html
-            } catch (error) {
-                // عرض رسالة الخطأ
-                console.error("خطأ في تسجيل الدخول:", error.message);
-                switch (error.code) {
-                    case 'auth/invalid-email':
-                        errorMessageDiv.textContent = 'البريد الإلكتروني غير صالح.';
-                        break;
-                    case 'auth/user-disabled':
-                        errorMessageDiv.textContent = 'هذا الحساب معطل.';
-                        break;
-                    case 'auth/user-not-found':
-                    case 'auth/wrong-password':
-                        errorMessageDiv.textContent = 'البريد الإلكتروني أو كلمة المرور غير صحيحة.';
-                        break;
-                    default:
-                        errorMessageDiv.textContent = 'حدث خطأ أثناء تسجيل الدخول. يرجى المحاولة مرة أخرى.';
-                }
-            }
-        });
-    </script>
+    <script type="module" src="app.js"></script>
 </body>
 </html>
