--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <div class="login-container">
+        <img src="https://via.placeholder.com/100x100?text=Logo" alt="Pharmacy Logo" class="login-logo">
         <h2>تسجيل الدخول</h2>
         <form id="loginForm">
             <div class="form-group">
@@ -22,11 +23,14 @@
                 <label for="password">كلمة المرور:</label>
                 <input type="password" id="password" required>
             </div>
-            <button type="submit">دخول</button>
+            <button type="submit" class="btn btn-primary">دخول</button>
             <div id="errorMessage" class="error-message"></div>
         </form>
     </div>
 
+    <div id="customAlertContainer" class="custom-alert-container"></div>
+
+    <script type="module" src="auth.js"></script>
     <script type="module" src="app.js"></script>
 </body>
 </html>
