--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 </head>
 <body>
     <div class="login-container">
-        <img src="https://via.placeholder.com/100x100?text=Logo" alt="Pharmacy Logo" class="login-logo">
         <h2>تسجيل الدخول</h2>
         <form id="loginForm">
             <div class="form-group">
@@ -23,7 +22,7 @@
                 <label for="password">كلمة المرور:</label>
                 <input type="password" id="password" required>
             </div>
-            <button type="submit" class="btn btn-primary">دخول</button>
+            <button type="submit">دخول</button>
             <div id="errorMessage" class="error-message"></div>
         </form>
     </div>
@@ -31,6 +30,5 @@
     <div id="customAlertContainer" class="custom-alert-container"></div>
 
     <script type="module" src="auth.js"></script>
-    <script type="module" src="app.js"></script>
-</body>
+    <script type="module" src="app.js"></script> </body>
 </html>
