--- a/dashboard.html
+++ b/dashboard.html
@@ -50,8 +50,7 @@
                     <div class="search-filter-group">
                         <div class="input-icon-group">
                             <input type="text" id="searchInput" placeholder="ابحث بالاسم التجاري، العلمي، الباركود...">
-                            <i class="fas fa-search icon-left"></i>
-                        </div>
+                            <i class="fas fa-search icon-right"></i> </div>
                         <select id="filterCategory" class="form-select">
                             <option value="">كل المنتجات</option>
                             <option value="قريب من الانتهاء">قريب من الانتهاء</option>
