--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <label for="password">كلمة المرور:</label>
                 <input type="password" id="password" required>
             </div>
-            <button type="submit">دخول</button>
+            <button type="submit" class="btn-login">دخول</button>
             <div id="errorMessage" class="error-message"></div>
         </form>
     </div>
