--- a/dashboard.html
+++ b/dashboard.html
@@ -49,8 +49,9 @@
                 <div class="card controls-section">
                     <div class="search-filter-group">
                         <div class="input-icon-group">
-                            <input type="text" id="searchInput" placeholder="ابحث بالاسم التجاري، العلمي، الباركود...">
-                            <i class="fas fa-search icon-right"></i> </div>
+                            <input type="text" id="searchInput" placeholder="ابحث بالاسم التجاري، العلمي، الباركود..." class="form-input">
+                            <i class="fas fa-search icon-right"></i>
+                        </div>
                         <select id="filterCategory" class="form-select">
                             <option value="">كل المنتجات</option>
                             <option value="قريب من الانتهاء">قريب من الانتهاء</option>
