--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <form id="loginForm">
             <div class="form-group">
                 <label for="email">البريد الإلكتروني:</label>
-                <input type="email" id="email" required>
+                <input type="email" id="email" class="form-input" required>
             </div>
             <div class="form-group">
                 <label for="password">كلمة المرور:</label>
-                <input type="password" id="password" required>
+                <input type="password" id="password" class="form-input" required>
             </div>
-            <button type="submit" class="btn-login">دخول</button>
+            <button type="submit" class="btn btn-primary">دخول</button>
             <div id="errorMessage" class="error-message"></div>
         </form>
     </div>
